--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/fira-code": "5.0.18",
     "@fontsource-variable/montserrat": "5.0.19",
     "@fontsource-variable/roboto-flex": "5.0.15",
+    "@pinia/nuxt": "^0.5.1",
     "@samk-dev/nuxt-vcalendar": "^1.0.3",
     "@unhead/addons": "1.9.9",
     "@unhead/ssr": "1.9.9",
